# ancestry-recording

./: Cargo.toml  example.txt  generate_profiling_info.sh  help.txt  run_benchmark.sh  simaterial.py  wwtskdo.py
.github/workflows/: tests.yml
ancestry-common/: Cargo.toml
ancestry-common/src/: lib.rs
ancestry-inline-simplification/: Cargo.toml
ancestry-inline-simplification-prototype/: Cargo.toml
ancestry-inline-simplification-prototype/src/: ancestry.rs  individual.rs  lib.rs  population.rs  segment.rs  simulate.rs
ancestry-inline-simplification/src/: ancestry_overlapper.rs  error.rs  flags.rs  indexed_node.rs  indexed_node_update_ancestry.rs  indexed_population.rs  individual.rs  individual_heap.rs  interval.rs  intervals.rs  lib.rs  node.rs  node_heap.rs  population.rs  propagate_ancestry_changes.rs  segment.rs  segments.rs  update_ancestry.rs  util.rs
ancestry-inline-simplification/tests/: integration.rs
ancestry-prototype/: Cargo.toml
ancestry-prototype/src/: ancestry.rs  lib.rs  simplify.rs
benchmark/: Cargo.toml
benchmark/src/: main.rs
current-algorithm/: Cargo.toml
current-algorithm/src/: ancestry.rs  lib.rs  simplify.rs
neutral-evolution/: Cargo.toml
neutral-evolution/src/: lib.rs
tskit-evolution/: Cargo.toml
tskit-evolution/src/: lib.rs
tskit-evolution/tests/: integration.rs
