[package]
name = "ancestry-inline-simplification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancestry-common = { version = "~0.1.0", path = "../ancestry-common" }
hashbrown = "~0.12.0"
bitflags = "~1.3.0"
thiserror = "~1.0.30"
# rand = "~0.8.5"
# rand_pcg = "~0.3.1"

