[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = 2

[dependencies]
tskit-evolution = { version = "~0.1.0", path = "../tskit-evolution" }
ancestry-inline-simplification = { version = "~0.1.0", path = "../ancestry-inline-simplification" }
neutral-evolution = { version = "~0.1.0", path = "../neutral-evolution" }
ancestry-common = { version = "~0.1.0", path = "../ancestry-common" }
clap = { version = "~3.2.8", features = ["derive"] }
tskit = "~0.13"
