[package]
name = "neutral-evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancestry-common = { version = "~0.1.0", path = "../ancestry-common" }
rand = "~0.8.5"
rand_pcg = "~0.3.1"
rand_distr = "0.4.3"
thiserror = "~1.0"
