[package]
name = "tskit-evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancestry-common = { version = "~0.1.0", path = "../ancestry-common" }
neutral-evolution = { version = "~0.1.0", path = "../neutral-evolution" }
tskit = "~0.14"
